Grammar Check and Corrections

--- a/On Site Files/public_html/about.html
+++ b/On Site Files/public_html/about.html
@@ -40,17 +40,17 @@
       Twitter – @raynertanxw
       </span>
 
-      <p>Hello there! I am Rayner Tan, and I am an aspiring game developer. My passion lies in the game industry and my dream is to be an Indie game developer.</p>
+      <p>Hello there! I am Rayner Tan, an aspiring game developer. My passion lies in the game industry and my dream is to be an Indie game developer.</p>
 
-      <p>Primarily, I am a programmer, but I also have basic Photoshop and Illustrator skills that I use to create simple sprites for the games I make. Having learnt 3D modelling in Autodesk Maya during a school module, I have also started making basic 3D assets. I have been programming since the age of 13 and started by exploring javascript to create a quadratic formula calculator.</p>
+      <p>Primarily, I am a programmer, but I also have basic Photoshop and Illustrator skills that I use to create simple sprites for the games I make. Having learnt 3D modelling in Autodesk Maya in a school module, I have also started making basic 3D assets. I have been programming since the age of 13, and started out by exploring javascript to create a quadratic formula calculator.</p>
 
-      <p>Since then, I have explored other languages such as Swift/Objective C, C++, C#, Java, and a couple of web languages such as HTML, CSS, and php. I have experience in making games and applications using Unity Game Engine and Xcode.</p>
+      <p>Since then, I have explored other languages such as Swift/Objective C, C++, C#, Java, and a couple of web languages such as HTML, CSS, and php. I also have experience in making games and applications using Unity Game Engine and Xcode.</p>
 
       <p>Recently, I have become interested in graphics programming and writing shaders. I picked up OpenGL 3.2 after learning OpenGL 1.0 in school and have gone on to ShaderLab and Cg in Unity.</p>
 
       <p>My hobbies include gaming, Chinese Calligraphy, Origami, and collecting. I enjoy collecting nanoblocks, jigsaw puzzles, Lego sets, souvenirs, game art books, game original soundtracks, and plushies.</p>
 
-      <p>I am also a huge food lover and enjoy sceneic views such as those of Yosemite and also walking under the beautiful Sakura trees during full bloom in Shinjuku Gyoen.</p>
+      <p>I am also a huge food lover and enjoy scenic views such as those of Yosemite, and the beautiful Sakura trees during full bloom in Shinjuku Gyoen.</p>
 
       <hr>
 
