--- a/On Site Files/public_html/projectSubPages/dontspam.html
+++ b/On Site Files/public_html/projectSubPages/dontspam.html
@@ -44,13 +44,13 @@
 
       <br>
 
-      <p>DontSpam was resulted from seven days of work during my semestral break. The aim of the game was to juggle the red cube within the screen boundaries marked by the red lines. Players control the cube by shooting projectiles from the spaceship to move and rotate it. The spaceship can be controlled via tilting the device. Players can compete for either the longest survival time, or the most number of complete rotations made.</p>
+      <p>DontSpam resulted from seven days of work during my semestral break. The aim of the game was to juggle the red cube within the screen boundaries marked by the red lines. Players control the cube by shooting projectiles from the spaceship to move and rotate it. The spaceship can be controlled via tilting the device. Players can compete for either the longest survival time, or the most number of complete rotations made.</p>
 
-      <p>The name DontSpam comes from the fact that spamming projectiles will make it even harder to manipulate the cube. The cube would spin out of control or rise too quickly all the way to the top of the boundary, resulting in a Game Over. This name was suggested by my senior, Samuel Soh, who helped play test the game during its early stages. Samuel also gave me the idea of detecting complete rotations for score.</p>
+      <p>The name DontSpam comes from the fact that spamming projectiles will make it even harder to manipulate the cube. The cube would spin out of control or rise too quickly all the way to the top of the boundary, resulting in a Game Over. This name was suggested by my senior, Samuel Soh, who helped to play test the game during its early stages. Samuel also gave me the idea of detecting complete rotations for score.</p>
 
       <p>DontSpam is addictively challenging and tests the player’s skill and patience as they resist the urge to spam projectiles into the corners of the cube in hopes of speeding up rotations. Less skilled players can opt to compete for best survival time, which requires less skill.</p>
 
-      <p>UPDATE:<br>During the next semestral school break, the game has since went through a physics change and included the must requested sensitivity slider. The game also went through a complete graphical overhaul. These changes were well received. An android port was made in Unity as well.</p>
+      <p>UPDATE:<br>During the next semestral school break, the game has since went through a physics change and included the much requested sensitivity slider. The game also went through a complete graphical overhaul. These changes were well received. An android port was made in Unity as well.</p>
 
       <img src="../assets/screenshots/dontspam_1.png" alt="" class="screenshot-portrait">
       <br class="sm-only-break">
