--- a/On Site Files/public_html/projectSubPages/facio.html
+++ b/On Site Files/public_html/projectSubPages/facio.html
@@ -48,13 +48,13 @@
 
       <br>
 
-      <p>Facio was set up from a competition called <a href="https://www.juniorachievement.org/web/ja-usa/home" class="content-link" target="_blank">Junior Achievement</a> that puts participants through a program – enabling them to experience running a company. I was asked by the Facio team to create a game that would help with their business in terms of promotion and sales.</p>
+      <p>Facio was set up from a competition called <a href="https://www.juniorachievement.org/web/ja-usa/home" class="content-link" target="_blank">Junior Achievement</a> that puts participants through a program enabling them to experience running a company. I was asked by the Facio team to create a game that would help with their business in terms of promotion and sales.</p>
 
-      <p>This game was a result of that. I created this game which imitates physical prize claw games. As Facio's main product line is the Detachable, a bag that can detach into various customizable parts, the prizes were the different parts of the product. Collecting each part of the product entitles the player to a 50&cent; discount on the product. To give the player more challenge, they only have 5 tries. Tries recharge at a rate of one try per hour.</p>
+      <p>This game was a result of that. I created this game that imitates physical prize claw games. As Facio's main product is the Detachable, a bag that can detach into various customisable parts, the prizes were the different parts of the product. Collecting each part of the product entitles the player to a 50&cent; discount on the product. To give the player greater challenge, they only have five tries. Tries recharge at a rate of one try per hour.</p>
 
-      <p>As part of the Junior Achievement Competiton, the student team had a booth to sell their product. To help make their booth stand out, I also included a booth mode into the game. The booth mode is password locked so that players cannot practice beforehand. The booth is a challenge mode where the player is given only 5 tries, to grab all five prizes. Only two prizes are on screen at any point in time. Clearing the screen will release the next two prizes. If the player executes a perfect game and got all five prizes using the given five tries, they get the full $2.50 discount.</p>
+      <p>As part of the Junior Achievement Competiton, the student team had a booth to sell their product. To help enhance their booth, I also included a booth mode into the game. The booth mode is password locked so players cannot practice beforehand. It is a challenge mode where the player is given only five tries to grab all five prizes. Only two prizes are on screen at any point in time. Clearing the screen will release the next two prizes. If the player completes a perfect game and got all five prizes using the given five tries, they get the full $2.50 discount.</p>
 
-      <p>The team won first place in the Singapore round in 2016, and proceeded to do Singapore proud by placing third and earning the Microsoft Best Use of IT Technology Award in the Asia Pacific (APAC) round.</p>
+      <p>The team won first place in the Singapore round in 2016, and proceeded to do Singapore proud by placing third and earning the Microsoft Best Use of IT Technology Award in the Asia Pacific (APAC) round held in Seoul, Korea.</p>
 
       <!--
       <p>Should you wish to try the booth mode, the password is 'JA.tpfbi'. Password is released as the competiton is now over.</p>
