Updated with DaburuTools Project page

--- a/On Site Files/public_html/index.html
+++ b/On Site Files/public_html/index.html
@@ -8,6 +8,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 
     <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <style>
+    .button-sm
+    {
+      display: inline-block;
+    }
+    </style>
 
     <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 
@@ -29,6 +35,20 @@
     </div>
 
     <div class="container">
+
+      <a href="projectSubPages/daburutools.html">
+        <div class="project grayscale">
+
+          <div class="description">
+            <span class="heading">DaburuTools</span>
+            <br>
+            Unity Tools
+          </div>
+
+          <img class="picture-inverse" src="assets/images/daburutools.png">
+
+        </div>
+      </a>
 
       <a href="projectSubPages/cellulose.html">
         <div class="project grayscale">
@@ -133,6 +153,26 @@
     <!--sm projects-->
 
     <div class="project-wrapper-sm">
+
+      <div class="project-bar-sm">
+        <div class="project-sm">
+          <img class="picture-inverse" src="assets/images/daburutools.png">
+        </div>
+
+        <div class="description-sm">
+          <span class="heading">Daburu<br/>Tools</span>
+          <br>
+          <span class="sub-heading">Unity Tools</span>
+          <br>
+          <a href="projectSubPages/daburutools.html">
+            <div class="button-sm">
+              <span>Learn More</span>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <hr class="line-sm">
 
       <div class="project-bar-sm">
         <div class="project-sm">
