--- a/On Site Files/public_html/daburutools-downloads.html
+++ b/On Site Files/public_html/daburutools-downloads.html
@@ -47,13 +47,21 @@
 
         <table>
           <tr>
+            <td class="package-version-text">DaburuTools_v0.2.3 Asset Package</td>
+            <td class="package-download-icon">
+              <a href="../downloads/daburutools/DaburuTools_v0.2.3.unitypackage" class="downloadIcon">
+                <i class="fa fa-download fa-2x"></i>
+              </a>
+            </td>
+          </tr>
+          <!-- <tr>
             <td class="package-version-text">DaburuTools_v0.2.2 Asset Package</td>
             <td class="package-download-icon">
               <a href="../downloads/daburutools/DaburuTools_v0.2.2.unitypackage" class="downloadIcon">
                 <i class="fa fa-download fa-2x"></i>
               </a>
             </td>
-          </tr>
+          </tr> -->
           <tr>
             <td class="package-version-text">DaburuTools_v0.2.1 Asset Package</td>
             <td class="package-download-icon">
