--- a/On Site Files/public_html/daburutools-downloads.html
+++ b/On Site Files/public_html/daburutools-downloads.html
@@ -47,6 +47,15 @@
 
         <table>
           <tr>
+            <td class="package-version-text">DaburuTools_v0.3 Asset Package</td>
+            <td class="package-download-icon">
+              <a href="../downloads/daburutools/DaburuTools_v0.3.unitypackage" class="downloadIcon">
+                <i class="fa fa-download fa-2x"></i>
+              </a>
+            </td>
+          </tr>
+
+          <tr>
             <td class="package-version-text">DaburuTools_v0.2.3 Asset Package</td>
             <td class="package-download-icon">
               <a href="../downloads/daburutools/DaburuTools_v0.2.3.unitypackage" class="downloadIcon">
@@ -54,6 +63,7 @@
               </a>
             </td>
           </tr>
+
           <!-- <tr>
             <td class="package-version-text">DaburuTools_v0.2.2 Asset Package</td>
             <td class="package-download-icon">
@@ -62,6 +72,7 @@
               </a>
             </td>
           </tr> -->
+
           <tr>
             <td class="package-version-text">DaburuTools_v0.2.1 Asset Package</td>
             <td class="package-download-icon">
@@ -70,6 +81,7 @@
               </a>
             </td>
           </tr>
+
           <tr>
             <td class="package-version-text">DaburuTools_v0.2 Asset Package</td>
             <td class="package-download-icon">
@@ -78,6 +90,7 @@
               </a>
             </td>
           </tr>
+          
           <tr>
             <td class="package-version-text">DaburuTools_v0.1 Asset Package</td>
             <td class="package-download-icon">
