Updated to host v0.4.1 of DaburuTools

--- a/On Site Files/public_html/daburutools-downloads.html
+++ b/On Site Files/public_html/daburutools-downloads.html
@@ -47,6 +47,15 @@
 
         <table>
           <tr>
+            <td class="package-version-text">DaburuTools_v0.4.1 Asset Package</td>
+            <td class="package-download-icon">
+              <a href="../downloads/daburutools/DaburuTools_v0.4.1.unitypackage" class="downloadIcon">
+                <i class="fa fa-download fa-2x"></i>
+              </a>
+            </td>
+          </tr>
+
+          <tr>
             <td class="package-version-text">DaburuTools_v0.4 Asset Package</td>
             <td class="package-download-icon">
               <a href="../downloads/daburutools/DaburuTools_v0.4.unitypackage" class="downloadIcon">
