Cellulose: Removed apk hosting, now with Play Store link

--- a/On Site Files/public_html/projectSubPages/cellulose.html
+++ b/On Site Files/public_html/projectSubPages/cellulose.html
@@ -67,7 +67,7 @@
 
       <div class="downloadIcons">
 
-        <a href="../downloads/cellulose/submissionBuilds/GDP_Cellulose.apk" class="downloadIcon">
+        <a href="https://play.google.com/store/apps/details?id=com.tanxuewenrayner.Cellulose" class="downloadIcon">
           <i class="fa fa-android fa-3x fa-border"></i>
         </a>
 
