Updated Cellulose info with store page download.

--- a/On Site Files/public_html/projectSubPages/cellulose.html
+++ b/On Site Files/public_html/projectSubPages/cellulose.html
@@ -50,9 +50,9 @@
 
       <p>The game can run on medium to high end mobile devices and maintain a steady 60fps / 30fps (iOS) with reasonable battery consumption. This was achieved on top of having up to 250 cells physically and logically interacting with each other. Throughout development, we focused on performance and constantly profiled, checking for any inefficiencies that we could optimise.</p>
 
-      <p>The game is still in development. You can find the source of the project on our GitHub repository here: <a href="https://github.com/raynertanxw/GDP_Cellulose">https://github.com/raynertanxw/GDP_Cellulose</a></p>
+      <p>The game has been released on the iOS App Store and Google Play Store. Click the respective buttons below to download from the respective stores.</p>
 
-      <p>You can also download the stable version of the project in Android .apk and a widnows port (as our game is single-touch, mouse controls work nicely) by clicking the respective icons below.</p>
+      <p>You can find the source of the project on our GitHub repository here: <a href="https://github.com/raynertanxw/GDP_Cellulose">https://github.com/raynertanxw/GDP_Cellulose</a> You can also download and a widnows port (as our game is single-touch, mouse controls work nicely) by clicking the windows icon below.</p>
 
 
       <img src="../assets/screenshots/cellulose_1.png" alt="" class="screenshot-portrait">
@@ -69,6 +69,10 @@
 
         <a href="https://play.google.com/store/apps/details?id=com.tanxuewenrayner.Cellulose" class="downloadIcon">
           <i class="fa fa-android fa-3x fa-border"></i>
+        </a>
+
+        <a href="https://itunes.apple.com/us/app/cellulose-pursuit/id1132839388?ls=1&mt=8" class="downloadIcon">
+          <i class="fa fa-apple fa-3x fa-border"></i>
         </a>
 
         <a href="../downloads/cellulose/submissionBuilds/GDP_Cellulose_WindowsPort.zip" class="downloadIcon">
