--- a/On Site Files/public_html/projectSubPages/cellulose.html
+++ b/On Site Files/public_html/projectSubPages/cellulose.html
@@ -44,6 +44,8 @@
 
       <br>
 
+      <p><strong>Cellulose is a finalist in the <a href="http://www.sitfawards.com/">SiTF Awards</a> 2016</strong></p>
+
       <p>Cellulose is a mobile fast-paced RTS game. Players play the role of a commanding immune system cell, controling groups of child cells to chase after invading viruses.</p>
 
       <p>Cellulose started off as a school project in a group of four. Since then, we have continued working on this post submission. I was responsible for the player child cell AI, that uses an object pool containing 100 instances of flocking-enabled finite state machines. I also programmed all player controls, user interface, main menu, gameplay logic, and level structure. For the level structure, I used a system of Scriptable Objects to store level specific information.</p>
@@ -52,7 +54,7 @@
 
       <p>The game has been released on the iOS App Store and Google Play Store. Click the respective buttons below to download from the respective stores.</p>
 
-      <p>You can find the source of the project on our GitHub repository here: <a href="https://github.com/raynertanxw/GDP_Cellulose">https://github.com/raynertanxw/GDP_Cellulose</a> You can also download and a widnows port (as our game is single-touch, mouse controls work nicely) by clicking the windows icon below.</p>
+      <p>You can find the source of the project on our GitHub repository here: <a href="https://github.com/raynertanxw/GDP_Cellulose">https://github.com/raynertanxw/GDP_Cellulose</a> You can also download a Windows port (as our game is single-touch, mouse controls work nicely) by clicking the Windows icon below.</p>
 
 
       <img src="../assets/screenshots/cellulose_1.png" alt="" class="screenshot-portrait">
