Updated with new resume PDF and TowerPower

--- a/On Site Files/public_html/about.html
+++ b/On Site Files/public_html/about.html
@@ -38,6 +38,8 @@
       Email &nbsp;&nbsp;&nbsp;– raynertanxw@me.com
       <br>
       Twitter – @raynertanxw
+      <br>
+      <a target="_blank" href="./assets/pdfs/RaynerTan_Resume_5_10_2016.pdf">Click here for resume</a>
       </span>
 
       <p>Hello there! I am Rayner Tan, an aspiring game developer. My passion lies in the game industry and my dream is to be an Indie game developer.</p>
