--- a/On Site Files/public_html/index.html
+++ b/On Site Files/public_html/index.html
@@ -50,6 +50,20 @@
         </div>
       </a>
 
+      <a href="projectSubPages/towerpower.html">
+        <div class="project grayscale">
+
+          <div class="description">
+            <span class="heading">Tower Power</span>
+            <br>
+            SteamVR
+          </div>
+
+          <img class="picture-inverse" src="assets/images/steamvr.png">
+
+        </div>
+      </a>
+
       <a href="projectSubPages/chessgeon.html">
         <div class="project grayscale">
 
@@ -193,6 +207,26 @@
           <span class="sub-heading">Unity Tools</span>
           <br>
           <a href="projectSubPages/daburutools.html">
+            <div class="button-sm">
+              <span>Learn More</span>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <hr class="line-sm">
+
+      <div class="project-bar-sm">
+        <div class="project-sm">
+          <img class="picture-inverse" src="assets/images/steamvr.png">
+        </div>
+
+        <div class="description-sm">
+          <span class="heading">Tower Power</span>
+          <br>
+          <span class="sub-heading">SteamVR</span>
+          <br>
+          <a href="projectSubPages/towerpower.html">
             <div class="button-sm">
               <span>Learn More</span>
             </div>
