Updated Cellulose with SiTF results

--- a/On Site Files/public_html/projectSubPages/cellulose.html
+++ b/On Site Files/public_html/projectSubPages/cellulose.html
@@ -44,7 +44,11 @@
 
       <br>
 
-      <p><strong>Cellulose is a finalist in the <a href="http://www.sitfawards.com/">SiTF Awards</a> 2016</strong></p>
+      <p style="text-align:center">Cellulose is a finalist in the <a href="http://www.sitfawards.com/">SiTF Awards</a> 2016
+      <br>
+      <strong>And won the Special Mention Award.</strong>
+      <br>
+      I was also awarded the Best Presenter Award</p>
 
       <p>Cellulose is a mobile fast-paced RTS game. Players play the role of a commanding immune system cell, controling groups of child cells to chase after invading viruses.</p>
 
