--- a/On Site Files/public_html/about.html
+++ b/On Site Files/public_html/about.html
@@ -30,88 +30,100 @@
 
     <div class="container-sm">
 
-      <span class="heading">About Me</span>
+        <span class="heading">About Me</span>
 
-      <img src="./assets/images/profile_pic.png" alt="" class="app-icon">
+        <img src="./assets/images/profile_pic.png" alt="" class="app-icon">
 
-      <span id="contact-details">
-      Email &nbsp;&nbsp;&nbsp;– raynertanxw@me.com
-      <br>
-      Twitter – @raynertanxw
-      <br>
-      <a target="_blank" href="./assets/pdfs/RaynerTan_Resume_5_10_2016.pdf">Click here for resume</a>
-      </span>
+        <span id="contact-details">
+        Email &nbsp;&nbsp;&nbsp;– raynertanxw@me.com
+        <br>
+        Twitter – @raynertanxw
+        <br>
+        <a target="_blank" href="./assets/pdfs/RaynerTan_Resume_16May2017.pdf">Click here for resume</a>
+        </span>
 
-      <p>Hello there! I am Rayner Tan, an aspiring game developer. My passion lies in the game industry and my dream is to be an Indie game developer.</p>
+        <p>Hello there! I am Rayner Tan, an aspiring game developer.</p>
 
-      <p>Primarily, I am a programmer, but I also have basic Photoshop and Illustrator skills that I use to create simple sprites for the games I make. Having learnt 3D modelling in Autodesk Maya in a school module, I have also started making basic 3D assets. I have been programming since the age of 13, and started out by exploring javascript to create a quadratic formula calculator.</p>
+        <p>Primarily, I am a programmer, but I also have basic Photoshop and Illustrator skills that I use to create simple sprites for the games I make. Having learnt 3D modelling in Autodesk Maya in a school module, I have also started making basic 3D assets. I have been programming since the age of 13, and started out by exploring javascript to create a quadratic formula calculator.</p>
 
-      <p>Since then, I have explored other languages such as Swift/Objective C, C++, C#, Java, and a couple of web languages such as HTML, CSS, and php. I also have experience in making games and applications using Unity Game Engine and Xcode.</p>
+        <p>Since then, I have explored other languages such as Swift/Objective C, C++, C#, Java, and a couple of web languages such as HTML, CSS, and php. I also have experience in making games and applications using Unity Game Engine and Xcode.</p>
 
-      <p>Recently, I have become interested in graphics programming and writing shaders. I picked up OpenGL 3.2 after learning OpenGL 1.0 in school and have gone on to ShaderLab and Cg in Unity.</p>
+        <p>My hobbies include gaming, Chinese Calligraphy, Origami, and collecting. I enjoy collecting nanoblocks, jigsaw puzzles, Lego sets, souvenirs, game art books, game original soundtracks, and plushies.</p>
 
-      <p>My hobbies include gaming, Chinese Calligraphy, Origami, and collecting. I enjoy collecting nanoblocks, jigsaw puzzles, Lego sets, souvenirs, game art books, game original soundtracks, and plushies.</p>
+        <p>I am also a huge food lover and enjoy scenic views such as those of Yosemite, and the beautiful Sakura trees during full bloom in Shinjuku Gyoen.</p>
 
-      <p>I am also a huge food lover and enjoy scenic views such as those of Yosemite, and the beautiful Sakura trees during full bloom in Shinjuku Gyoen.</p>
+        <hr>
 
-      <hr>
+        <span class="heading">Technical Skills</span>
 
-      <span class="heading">Technical Skills</span>
+        <p>I actively seek to pick up new skills and gain knowledge in fields that interest me. My current skills are as follows.</p>
 
-      <p>I actively seek to pick up new skills and gain knowledge in fields that interest me. My current skills are as follows.</p>
+        <span class="content-text">Current Skills:</span>
+        <ul class="content-text">
+            <li>Familiar with Design Patterns</li>
+            <li>Proficient in Swift, C#, and C++ programming languages</li>
+            <li>Experienced in Unity Game Engine, Xcode IDE</li>
+            <li>Trained in Adobe Photoshop and Autodesk Maya</li>
+            <li>Possess basic Web Development skills</li>
+        </ul>
 
-      <span class="content-text">Current Skills:</span>
-      <ul class="content-text">
-        <li>Proficient in Swift, C#, and C++ programming languages</li>
-        <li>Familiar with OpenGL 1.0, OpenGL 3.2, and Unity ShaderLab and Cg</li>
-        <li>Experienced in Unity Game Engine, Xcode IDE, and SpriteKit frameworks</li>
-        <li>Trained in Adobe Photoshop and Autodesk Maya</li>
-        <li>Possess basic Web Development skills</li>
-      </ul>
+        <hr>
 
-      <hr>
+        <span class="heading">Education</span>
 
-      <span class="heading">Education</span>
+        <p>I studied in the Diploma in Game Design and Development at Temasek Polytechnic, graduating top of the course and was award The Lee Kuan Yew Award for Mathematics and Science, given to top technology and science graduates. Previously, I was part of the pioneer batch of students at the School of Science and Technology, Singapore where I took my Singapore-Cambridge General Certificate of Education (Ordinary Level) Examinations.</p>
 
-      <p>Currently, I am studying for a Diploma in Game Design and Development at Temasek Polytechnic. Previously, I was part of the pioneer batch of students at the School of Science and Technology, Singapore where I took my Singapore-Cambridge General Certificate of Education (Ordinary Level) Examinations.</p>
+        <span class="content-text">List of Schools:</span>
+        <ul class="content-text">
+            <li>Temasek Polytechnic (TP) – Diploma in Game Design and Development (GDD) <em>2014 - 2017</em></li>
+            <li>School of Science and Technology, Singapore (SST) <em>2010 - 2013</em></li>
+            <li>Loyang Primary School (LPS) <em>2004 - 2009</em></li>
+        </ul>
 
-      <span class="content-text">List of Schools:</span>
-      <ul class="content-text">
-        <li>Temasek Polytechnic (TP) – Diploma in Game Design and Development (GDD) <em>2014 - current</em></li>
-        <li>School of Science and Technology, Singapore (SST) <em>2010 - 2013</em></li>
-        <li>Loyang Primary School (LPS) <em>2004 - 2009</em></li>
-      </ul>
+        <hr>
 
-      <hr>
+        <span class="heading">Achievements</span>
 
-      <span class="heading">Achievements</span>
+        <p>Over the years I have joined various competitions and won a number of awards. Listed below are some of these awards and competitions.</p>
 
-      <p>Over the years I have joined various competitions and won a number of awards. Listed below are some of these awards and competitions.</p>
+        <span class="content-text">List of Academic Awards:</span>
+        <ul class="content-text">
+            <li>Diploma with Merit in Game Design and Development, Temasek Polytechnic</li>
+            <ul>
+                <li>The Lee Kuan Yew Award for Mathetics and Science</li>
+                <li>Course Gold Medal</li>
+                <li>Infocomm Media Development Authority (IMDA) Excellence Award</li>
+                <li>Jurong Port Special Industry Prize</li>
+                <li>Jurong Port Project Prize</li>
+                <li>Jurong Port Prize</li>
+            </ul>
+            <li>School of Science and Technology Singapore</li>
+            <ul>
+                <li>Top O-Level Performers (2014 Celebrations@SST)</li>
+                <li>Outstanding All Rounder Student Awards 2011 – School Level Award (North West Community Development Council)</li>
+                <li>Edusave Certificate of Academic Achievement 2013 (Ministry of Education)</li>
+                <li>Edusave Certificate of Academic Achievement 2011 (Ministry of Education)</li>
+                <li>SST Achievement Award (2012 Celebrations@SST)</li>
+                <li>SST Achievement Award (2011 Celebrations@SST)</li>
+            </ul>
+        </ul>
 
-      <span class="content-text">List of Competitions:</span>
-      <ul class="content-text">
-        <li>Amazing Science-X Challenge – Special Mention Award (2010)</li>
-        <li>Australian Mathematics Competiton – Certificate of Distinction (2011)</li>
-        <li>Australian National Chemistry Quiz – Certificate of Merit (2012)</li>
-        <li>Friends of Singa – Merit Award (2011)</li>
-      </ul>
 
-      <span class="content-text">List of Academic Awards:</span>
-      <ul class="content-text">
-        <li>Certificate of Appreciation for contributions to the Game Design & Development Student Interest Group (Academic Year 2014/2015)</li>
-        <li>Top O-Level Performers (2014 Celebrations@SST)</li>
-        <li>Outstanding All Rounder Student Awards 2011 – School Level Award (North West Community Development Council)</li>
-        <li>Edusave Certificate of Academic Achievement 2013 (Ministry of Education)</li>
-        <li>Edusave Certificate of Academic Achievement 2011 (Ministry of Education)</li>
-        <li>SST Achievement Award (2012 Celebrations@SST)</li>
-        <li>SST Achievement Award (2011 Celebrations@SST)</li>
-      </ul>
+        <span class="content-text">List of Competitions:</span>
+        <ul class="content-text">
+            <li>SiTF Awards 2016 Best Presenter Award</li>
+            <li>SiTF Awards 2016 Project Special Mention Award</li>
+            <li>Amazing Science-X Challenge – Special Mention Award (2010)</li>
+            <li>Australian Mathematics Competiton – Certificate of Distinction (2011)</li>
+            <li>Australian National Chemistry Quiz – Certificate of Merit (2012)</li>
+            <li>Friends of Singa – Merit Award (2011)</li>
+        </ul>
 
-      <span class="content-text">Miscellaneous</span>
-      <ul class="content-text">
-        <li>Part of self-initiated service group that raised $4,000 for Japan Red Cross to aid in disaster relief efforts after the 2011 Tōhoku Earthquake</li>
-        <li>Exhibitionist at EduTech Seminar on FS@SG: Mobile Learning Activities (2011)</li>
-      </ul>
+        <span class="content-text">Miscellaneous</span>
+        <ul class="content-text">
+            <li>Part of self-initiated service group that raised $4,000 for Japan Red Cross to aid in disaster relief efforts after the 2011 Tōhoku Earthquake</li>
+            <li>Exhibitionist at EduTech Seminar on FS@SG: Mobile Learning Activities (2011)</li>
+        </ul>
 
     </div>
 
