Updated all "WORK" headers to point to allProjects.html

--- a/On Site Files/public_html/allProjects.html
+++ b/On Site Files/public_html/allProjects.html
@@ -27,7 +27,7 @@
         <span class="navtext">RAYNER TAN</span>
 
         <ul class="navitems navtext">
-          <li><a href="index.html" id="highlighted">WORK</a></li>
+          <li><a href="allProjects.html" id="highlighted">WORK</a></li>
           <li><a href="about.html">ABOUT</a></li>
         </ul>
 
