--- a/On Site Files/public_html/privacyPolicy.html
+++ b/On Site Files/public_html/privacyPolicy.html
@@ -21,7 +21,7 @@
             <span class="navtext">RAYNER TAN</span>
 
             <ul class="navitems navtext">
-                <li><a href="index.html">WORK</a></li>
+                <li><a href="allProjects.html">WORK</a></li>
                 <li><a href="about.html" id="highlighted">ABOUT</a></li>
             </ul>
 
