--- a/On Site Files/public_html/projectSubPages/dontspam.html
+++ b/On Site Files/public_html/projectSubPages/dontspam.html
@@ -22,7 +22,7 @@
         <span class="navtext">RAYNER TAN</span>
 
         <ul class="navitems navtext">
-          <li><a href="../index.html" id="highlighted">WORK</a></li>
+          <li><a href="../allProjects.html" id="highlighted">WORK</a></li>
           <li><a href="../about.html">ABOUT</a></li>
         </ul>
 
