Updated Tower Power with new awards

--- a/On Site Files/public_html/projectSubPages/towerpower.html
+++ b/On Site Files/public_html/projectSubPages/towerpower.html
@@ -61,6 +61,8 @@
 
       <p>During the 9 weeks of development, I had to pick up and learn Unity Networking. By the end of it, I was able to grasp sufficient knowlegde to synchronise hundreds of enemy units across multiple clients.</p>
 
+      <p>Tower Power was also awarded the Best Project Prize at the TP InfoTech Day 2017.</p>
+
       <img src="../assets/screenshots/towerpower_1.png" alt="" class="screenshot-landscape">
       <br class="sm-only-break">
 
