Updated privacy policy.

--- a/On Site Files/public_html/privacyPolicy.html
+++ b/On Site Files/public_html/privacyPolicy.html
@@ -100,7 +100,7 @@
 
         <span class="sub-heading">Changes</span>
 
-        <p>We reserve the right to change this Privacy Policy at any time. In the event we make material changes to this Privacy Policy, such policy will be re-posted in the "Privacy" section of our Games/Apps with the date such modifications were made indicated on the top of the page. Therefore, please review this Privacy Policy from time to time so that you are aware when any changes are made to this Privacy Policy. Your continued use of the Games/Apps after such change constitutes your acceptance of any such change(s), and if you do not accept any changes, you may choose not to use the Games/Apps or opt out by sending us an appropriate notice. Games/Apps Security</p>
+        <p>We reserve the right to change this Privacy Policy at any time. In the event we make material changes to this Privacy Policy, such policy will be updated here on this webpage with the date that it was last modified, indicated at the bottom of the page. Therefore, please review this Privacy Policy from time to time so that you are aware when any changes are made to this Privacy Policy. Your continued use of the Games/Apps after such change constitutes your acceptance of any such change(s), and if you do not accept any changes, you may choose not to use the Games/Apps or opt out by sending us an appropriate notice. Games/Apps Security</p>
 
         <p>It is entirely your choice whether or not you provide Personal Information to us. We and/or our third-party partners have put in place physical, electronic, and managerial procedures to attempt to safeguard and help prevent unauthorized access, maintain data security, and correctly use the Personal Information collected through the Games/Apps. We take, or obligate applicable third parties to take, reasonable precautions to protect our customers' Personal Information against loss, misuse, unauthorized disclosure, alteration, and destruction. However, please remember that no transmission of data over the Internet or any wireless network can be guaranteed to be 100% secure. As a result, while we strive to protect your Personal Information, we cannot ensure or warrant the security of any information that you transmit to us or from us, and you do so at your own risk. We cannot ensure or warrant the security of any information you transmit to us by email and you do so at your own risk.</p>
 
@@ -117,6 +117,10 @@
         <p>We do not represent or warrant that our Games/Apps will be available at all times, or that your use of the Games/Apps will be uninterrupted or error-free. We are not responsible for your ability to access the Games/Apps or for matters beyond our control.</p>
 
         <p>If you have any general questions about our Privacy Policy, please contact us at raynertanxw@me.com.</p>
+
+        <br>
+        <br>
+        <p>Last modified: 19th May 2017</p>
 
     </div>
 
