Removed 3 Towers, and JA projects

--- a/On Site Files/public_html/allProjects.html
+++ b/On Site Files/public_html/allProjects.html
@@ -148,47 +148,6 @@
         </div>
       </a>
 
-      <a href="projectSubPages/facio.html">
-        <div class="project grayscale">
-
-          <div class="description">
-            <span class="heading">Facio</span>
-            <br>
-            iOS / Android
-          </div>
-
-          <img class="picture" src="assets/images/facio.png">
-
-        </div>
-      </a>
-
-      <a href="projectSubPages/envlight.html">
-        <div class="project grayscale">
-
-          <div class="description">
-            <span class="heading">envlight</span>
-            <br>
-            iOS Game
-          </div>
-
-          <img class="picture" src="assets/images/envlight.png">
-
-        </div>
-      </a>
-
-      <!-- <a href="projectSubPages/3towers.html">
-        <div class="project grayscale">
-
-          <div class="description">
-            <span class="heading">3 Towers</span>
-            <br>
-            iOS Game
-          </div>
-
-          <img class="picture" src="assets/images/3towers.png">
-
-        </div>
-      </a> -->
 
 
 
@@ -222,7 +181,7 @@
         </div>
 
         <div class="description-sm">
-          <span class="heading">Tower Power</span>
+          <span class="heading">Tower<br/>Power</span>
           <br>
           <span class="sub-heading">SteamVR</span>
           <br>
@@ -357,68 +316,6 @@
       </div>
 
       <hr class="line-sm">
-
-      <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture" src="assets/images/facio.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">Facio</span>
-          <br>
-          <span class="sub-heading">iOS / Android</span>
-          <br>
-          <a href="projectSubPages/facio.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <hr class="line-sm">
-
-      <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture" src="assets/images/envlight.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">envlight</span>
-          <br>
-          <span class="sub-heading">iOS Game</span>
-          <br>
-          <a href="projectSubPages/envlight.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <hr class="line-sm">
-
-      <!-- <div class="project-bar-sm">
-        <div class="project-sm">
-          <img class="picture" src="assets/images/3towers.png">
-        </div>
-
-        <div class="description-sm">
-          <span class="heading">3 Towers</span>
-          <br>
-          <span class="sub-heading">iOS Game</span>
-          <br>
-          <a href="projectSubPages/3towers.html">
-            <div class="button-sm">
-              <span>Learn More</span>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div> -->
-
-
-
 
     </div>
 
