Removed the last of the references to index.html and redirected them to allProjects.

--- a/On Site Files/public_html/projectSubPages/chessgeon.html
+++ b/On Site Files/public_html/projectSubPages/chessgeon.html
@@ -72,7 +72,7 @@
       <br>
       <br>
 
-      <a href="../index.html">
+      <a href="../allProjects.html">
         <div class="button">
           <span>More Projects</span>
         </div>
