--- a/On Site Files/public_html/projectSubPages/comingsoon.html
+++ b/On Site Files/public_html/projectSubPages/comingsoon.html
@@ -36,7 +36,7 @@
 
       <p>You can check the other games I have made by clicking the 'More Projects' button below.</p>
 
-      <a href="../index.html">
+      <a href="../allProjects.html">
         <div class="button">
           <span>More Projects</span>
         </div>
