--- a/On Site Files/public_html/projectSubPages/shapeflip.html
+++ b/On Site Files/public_html/projectSubPages/shapeflip.html
@@ -64,7 +64,7 @@
         </div>
       </a>
 
-      <a href="../index.html">
+      <a href="../allProjects.html">
         <div class="button">
           <span>More Projects</span>
         </div>
