--- a/On Site Files/public_html/projectSubPages/different.html
+++ b/On Site Files/public_html/projectSubPages/different.html
@@ -87,7 +87,7 @@
       <br>
       <br>
 
-      <a href="../index.html">
+      <a href="../allProjects.html">
         <div class="button">
           <span>More Projects</span>
         </div>
