Added a COMMON "more projects" button.

--- a/On Site Files/public_html/projectSubPages/comingsoon.html
+++ b/On Site Files/public_html/projectSubPages/comingsoon.html
@@ -36,11 +36,7 @@
 
       <p>You can check the other games I have made by clicking the 'More Projects' button below.</p>
 
-      <a href="../allProjects.html">
-        <div class="button">
-          <span>More Projects</span>
-        </div>
-      </a>
+      <div id="moreProjectsButton"></div>
 
     </div>
 
@@ -51,6 +47,9 @@
 
   <!--JQuery-->
   <script type="text/javascript" src="../scripts/jquery.min.js"></script>
+  <script>
+      $("#moreProjectsButton").load("COMMON_moreProjectsButton.html");
+  </script>
 
   <!--Custom JS-->
   <script type="text/javascript" src="../scripts/main.js"></script>
