--- a/On Site Files/public_html/projectSubPages/shapeflip.html
+++ b/On Site Files/public_html/projectSubPages/shapeflip.html
@@ -64,11 +64,7 @@
         </div>
       </a>
 
-      <a href="../allProjects.html">
-        <div class="button">
-          <span>More Projects</span>
-        </div>
-      </a>
+      <div id="moreProjectsButton"></div>
 
     </div>
 
@@ -79,6 +75,9 @@
 
   <!--JQuery-->
   <script type="text/javascript" src="../scripts/jquery.min.js"></script>
+  <script>
+      $("#moreProjectsButton").load("COMMON_moreProjectsButton.html");
+  </script>
 
   <!--Custom JS-->
   <script type="text/javascript" src="../scripts/main.js"></script>
