--- a/On Site Files/public_html/projectSubPages/lifeslemons.html
+++ b/On Site Files/public_html/projectSubPages/lifeslemons.html
@@ -79,11 +79,7 @@
       <br>
       <br>
 
-      <a href="../allProjects.html">
-        <div class="button">
-          <span>More Projects</span>
-        </div>
-      </a>
+      <div id="moreProjectsButton"></div>
 
     </div>
 
@@ -94,6 +90,9 @@
 
   <!--JQuery-->
   <script type="text/javascript" src="../scripts/jquery.min.js"></script>
+  <script>
+      $("#moreProjectsButton").load("COMMON_moreProjectsButton.html");
+  </script>
 
   <!--Custom JS-->
   <script type="text/javascript" src="../scripts/main.js"></script>
